--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-file-include": "^2.2.2",
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^4.1.0",
+    "gulp-sourcemaps": "^2.6.5",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1"
   }
